# curiosity

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  WORKSPACE  bench.cpp
.github/workflows/: build-image.yml  iwyu.yml  verify-env.yml
algorithms/: BUILD.bazel  bst.h  bst_test.cpp  interval_region.h  interval_tree.h  interval_tree_bench.cpp  interval_tree_poly.cpp  interval_tree_test.cpp  interval_vis.cpp
deeplearning/: BUILD.bazel  gen_dot_graph.cpp  micrograd.h  micrograd_test.cpp
deeplearning/tutorials/: makemore.ipynb  micrograd.ipynb  micrograd.py  renderer.py
markets/: binomial_tree.h  binomial_tree_test.cpp  propagators.h  rates_market.h  render_tree.cpp
montecarlo/: BUILD.bazel  traffic.cpp
systems/: BUILD.bazel
