cc_library(
    name = "micrograd",
    hdrs = ["micrograd.h"],
    deps = [
        "@abseil-cpp//absl/strings",
        "@boost.graph",
    ],
)

cc_test(
    name = "micrograd_test",
    srcs = ["micrograd_test.cpp"],
    deps = [
        ":micrograd",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "gen_dot_graph",
    srcs = ["gen_dot_graph.cpp"],
    deps = [":micrograd"],
)
